EQA-653 Enable real time output for scripts